--- a/DockerFile
+++ b/DockerFile
@@ -1,14 +1,20 @@
 # Use the official Node.js image as the base image
 FROM node:18
 
+# Install git
+RUN apt-get update && apt-get install -y git
+
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /workspace
 
 # Copy package.json and package-lock.json to the working directory
-COPY package.json ./
+COPY package*.json ./
 
 # Install dependencies
 RUN npm install
+
+# Ensure react-scripts is available in the path
+ENV PATH /workspace/node_modules/.bin:$PATH
 
 # Copy the rest of the application code to the working directory
 COPY . .
