--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,17 +3,20 @@
     "build": {
         "dockerfile": "Dockerfile"
     },
-    "context": "..",
     "appPort": [
         "3000:3000"
     ],
     "postCreateCommand": "npm install",
     "remoteUser": "node",
     "workspaceFolder": "/workspace",
-    "extensions": [
-        "dbaeumer.vscode-eslint"
-    ],
-    "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash"
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "dbaeumer.vscode-eslint"
+            ],
+            "settings": {
+                "terminal.integrated.shell.linux": "/bin/bash"
+            }
+        }
     }
 }
