--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "Node.js Dev Container",
     "build": {
-        "dockerfile": "Dockerfile"
+        "dockerfile": ".././DockerFile"
     },
     "appPort": [
         "3000:3000"
