--- a/package.json
+++ b/package.json
@@ -8,7 +8,20 @@
     "react-social-icons": "^6.16.0",
     "source-map-explorer": "^2.5.3",
     "styled-components": "^6.1.11",
-    "web-vitals": "^4.0.1"
+    "web-vitals": "^4.0.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "mdb-ui-kit": "^4.0.0",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
