--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "npm-check-updates": "^16.14.20",
-    "react-scripts": "5.0.1",
-    "react-social-icons": "^6.16.0",
-    "source-map-explorer": "^2.5.3",
-    "styled-components": "^6.1.11",
-    "web-vitals": "^4.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@vercel/speed-insights": "^1.0.11",
     "bootstrap": "^5.3.3",
     "mdb-ui-kit": "^7.3.0",
+    "npm-check-updates": "^16.14.20",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "5.0.1",
+    "react-social-icons": "^6.16.0",
+    "source-map-explorer": "^2.5.3",
+    "styled-components": "^6.1.11",
+    "web-vitals": "^4.0.1"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
